traversal.snake.Snake.scala.error
Compilation error:
Snake:14: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^Snake:21: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^