traversal.snake.Snake.scala.code
override def run() 
{
  baisseBrosse()
  
  def positionFinale():Boolean = {
    var dir:Direction = getDirection()
    if(estFaceMur())
    	return true
    else if(dir == Direction.EAST)
    {
      gauche()
      if(estFaceMur())
    		return true
      droite()
    }
    else if(dir == Direction.WEST)
    {
      droite()
      if(estFaceMur())
    		return true
      gauche()
    }
    else return false
  }
  
  def avancer() {
    var dir:Direction = getDirection()
    if(estFaceMur())
    {
      if(dir == Direction.EAST)
      {
        gauche()
        avance()
        gauche()
      }
      else if(dir == Direction.WEST)
      {
        droite()
        avance()
        droite()
      }
    }
    else avance()
  }
  
  while(!positionFinale())
  {
    avancer()
  }
}